--- a/cookies.html
+++ b/cookies.html
@@ -25,19 +25,22 @@
             <a href="/" class="navigation__link">Home</a>
           </li>
           <li class="navigation__item">
-            <a href="/#about" class="navigation__link">About us</a>
+            <a href="/#about" class="navigation__link">game description</a>
+          </li>
+
+          <li class="navigation__item">
+            <a href="/#features" class="navigation__link">benefits</a>
+          </li>
+
+          <li class="navigation__item">
+            <a href="/#reviews" class="navigation__link">Reviews</a>
           </li>
           <li class="navigation__item">
-            <a href="/#features" class="navigation__link">Benefits </a>
+            <a href="/#faq" class="navigation__link">FAQ</a>
           </li>
           <li class="navigation__item">
             <a href="/#gallery" class="navigation__link">Gallery</a>
           </li>
-
-          <li class="navigation__item">
-            <a href="/#faq" class="navigation__link">FAQ</a>
-          </li>
-
           <li class="navigation__item">
             <a
               href="/policy.html"
@@ -67,13 +70,13 @@
           <button type="button" class="header__icon-button" data-menu-button>
             <img
               class="header__icon header__icon--menu"
-              src="img/header/menu.png"
+              src="image/header/Menu.png"
               alt=""
             />
 
             <img
               class="header__icon header__icon--close close"
-              src="img/header/ep_close-bold.png"
+              src="image/header/Menu (1).png"
               alt=""
             />
           </button>
