--- a/terms.html
+++ b/terms.html
@@ -24,22 +24,15 @@
             <a href="/" class="navigation__link">Home</a>
           </li>
           <li class="navigation__item">
-            <a href="/#why" class="navigation__link">Why Us?</a>
+            <a href="/#about" class="navigation__link">game description</a>
           </li>
+
           <li class="navigation__item">
-            <a href="/#uniqueness" class="navigation__link">Our Uniqueness</a>
+            <a href="/#features" class="navigation__link">benefits</a>
           </li>
+
           <li class="navigation__item">
-            <a href="/#about" class="navigation__link">About the Game</a>
-          </li>
-          <li class="navigation__item">
-            <a href="/#how" class="navigation__link">How to Play</a>
-          </li>
-          <li class="navigation__item">
-            <a href="/#characters" class="navigation__link">Characters</a>
-          </li>
-          <li class="navigation__item">
-            <a href="/#reviews" class="navigation__link">User Reviews</a>
+            <a href="/#reviews" class="navigation__link">Reviews</a>
           </li>
           <li class="navigation__item">
             <a href="/#faq" class="navigation__link">FAQ</a>
@@ -48,7 +41,23 @@
             <a href="/#gallery" class="navigation__link">Gallery</a>
           </li>
           <li class="navigation__item">
-            <a href="/#features" class="navigation__link">Special Features</a>
+            <a
+              href="/policy.html"
+              class="navigation__link navigation__item-desk"
+              >Privacy Policy</a
+            >
+          </li>
+          <li class="navigation__item">
+            <a href="/terms.html" class="navigation__link navigation__item-desk"
+              >Terms and Conditions</a
+            >
+          </li>
+          <li class="navigation__item">
+            <a
+              href="/cookies.html"
+              class="navigation__link navigation__item-desk"
+              >Cookies Policy</a
+            >
           </li>
         </ul>
 
@@ -60,13 +69,13 @@
           <button type="button" class="header__icon-button" data-menu-button>
             <img
               class="header__icon header__icon--menu"
-              src="img/header/menu.png"
+              src="image/header/Menu.png"
               alt=""
             />
 
             <img
               class="header__icon header__icon--close close"
-              src="img/header//menu (1).png"
+              src="image/header/Menu (1).png"
               alt=""
             />
           </button>
